# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-09-15 Piotr Ozarowski <ozarow@gmail.com>
	* Updated German translation (thanks to Malte Wiemann)

2006-09-12 Piotr Ozarowski <ozarow@gmail.com>
	* "With" renamed to "Cast"
	* Tiny changes in preferences window

2006-09-08 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed required PyGTK version
	* Installation is now not required to run Griffith
	  (move griffith file to lib directory and run "./lib/griffith")

2006-09-07 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Updated Czech translation (thanks to Ondra 'Kepi' Kudlík)

2006-09-06 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed CSFD movie plugin (thanks to Ondra 'Kepi' Kudlík for patch #1449)

2006-09-02 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed some UTF encoding problems in FDb, Filmweb, Onet and WP movie plugins

2006-08-28 Piotr Ozarowski <ozarow@gmail.com>
	* Some GUI changes mainly suggested by Alan Horkan:
	  + menu reorganized
	  + poster button now opens poster window
	  + changed some icons to their stock equivalent

2006-08-27 Piotr Ozarowski <ozarow@gmail.com>
	* Added new green style to "html tables" template (HTML export plugin)
	  + old one renamed to "light green"
	* Added some highlights for next version to NEWS file

2006-08-25 Piotr Ozarowski <ozarow@gmail.com>
	* Movie plugins are now fetching only selected data.

2006-08-24 Piotr Ozarowski <ozarow@gmail.com>
	* Language treeview now supports codec/channel/subtitle format data (still needs work)

2006-08-23 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed problem with converting images on Windows (HTML export plugin)
	* Fixed bug with "You have to fill language..." after updating language list

2006-08-18 Piotr Ozarowski <ozarow@gmail.com>
	* Added green style to "html tables" template (HTML export plugin)

2006-08-15 Vasco Nunes <vasco.m.nunes@gmail.com>
	* tempdir for posters is now writable by all users under win32 systems

2006-08-15 Piotr Ozarowski <ozarow@gmail.com>