@@ -375,3 +375,21 @@ def clean_posters_dir(self):
 		print "%d orphan files cleaned."%counter
 	else:
 		print "No orphan files found."
+
+def decompress(data):
+	import gzip
+	from tempfile import mktemp
+	from os import remove
+
+	# zlib.decompress(data) doesn't work :-(
+	# workaround:
+	tmpfile_name = mktemp()
+	tmpfile = open(tmpfile_name, 'w')
+	tmpfile.write(data)
+	tmpfile.close()
+	try:
+		data = gzip.open(tmpfile_name).read()
+		remove(tmpfile_name)
+	except:
+		remove(tmpfile_name)
+	return data
