@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2006 Vasco Nunes
 
+2006-09-20 Piotr Ozarowski <ozarow@gmail.com>
+	* AniDB movie plugin now supports gziped data (closes: #5685)
+
 2006-09-15 Piotr Ozarowski <ozarow@gmail.com>
 	* Updated German translation (thanks to Malte Wiemann)
 
